# they

./: .gitignore  LICENSE  README.md  dune-project  go.mod  they.opam
.github/workflows/: test.yml
cmd/they/: main.go
internal/core/: board.go  core.go  core_test.go  position.go
internal/encoding/fen/: fen.go
internal/encoding/pacn/: pacn.go
internal/encoding/uci/: decode.go  encode.go  encode_test.go  errors.go  example_test.go  uci.go  uci_test.go
internal/encoding/uci/lexer/: lexer.go
internal/engine/: engine.go  engine_test.go
internal/uci/: uci.go  uci_test.go
lib/: dune
test/: dune
